Añadido API razonamiento
